--- a/app/src/main/res/layout/list_items_shimmer.xml
+++ b/app/src/main/res/layout/list_items_shimmer.xml
@@ -23,7 +23,7 @@
                 android:layout_height="150dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:background="#DFDFDF"
+                android:background="@color/colorShimmer"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -36,7 +36,7 @@
                 android:layout_height="16dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginBottom="88dp"
-                android:background="#DFDFDF"
+                android:background="@color/colorShimmer"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/img_item_shimmer"
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
-                android:background="#DFDFDF"
+                android:background="@color/colorShimmer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/img_item_shimmer"
                 app:layout_constraintTop_toBottomOf="@+id/item_tv_title_shimmer" />
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="48dp"
-                android:background="#DFDFDF"
+                android:background="@color/colorShimmer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/img_item_shimmer"
                 app:layout_constraintTop_toBottomOf="@+id/item_tv_vote_count_shimmer" />
@@ -70,7 +70,7 @@
                 android:id="@+id/item_tv_release_date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="#DFDFDF"
+                android:background="@color/colorShimmer"
                 android:layout_marginTop="4dp"
                 android:layout_marginStart="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
