--- a/app/src/main/res/layout/content_detail_shimmer.xml
+++ b/app/src/main/res/layout/content_detail_shimmer.xml
@@ -1,62 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint_detail"
-        android:background="@color/colorDetail"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_title_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <View
+            android:id="@+id/shimmer_title"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
             android:layout_marginTop="8dp"
+            android:background="@color/colorShimmer"
             android:gravity="center"
-            android:text="@string/title"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="24sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
-        <RatingBar
-            android:id="@+id/rb_rating_detail"
+        <View
+            android:id="@+id/shimmer_rating"
             style="?android:attr/ratingBarStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_width="100dp"
+            android:layout_height="20dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/colorShimmer"
             android:padding="2dp"
-            android:progressBackgroundTint="@android:color/darker_gray"
-            android:progressTint="@color/colorPrimary"
-            android:rating="3.5"
-            android:secondaryProgressTint="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail"
+            app:layout_constraintTop_toBottomOf="@+id/shimmer_title"
             app:layout_constraintVertical_bias="0.06999999" />
 
-        <TextView
-            android:id="@+id/tv_desc_detail"
+        <View
+            android:id="@+id/shimmer_detail"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
-            android:gravity="center"
+            android:background="@color/colorShimmer"
             android:padding="4dp"
-            android:text="@string/app_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rb_rating_detail"
+            app:layout_constraintTop_toBottomOf="@+id/shimmer_rating"
             app:layout_constraintVertical_bias="0.0" />
 
         <androidx.cardview.widget.CardView
@@ -67,10 +57,9 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="32dp"
             android:padding="4dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_desc_detail">
+            app:layout_constraintTop_toBottomOf="@+id/shimmer_detail">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -84,34 +73,28 @@
                     android:orientation="vertical"
                     app:layout_constraintGuide_percent="0.5013193" />
 
-                <TextView
+                <View
                     android:id="@+id/text_release"
-                    style="@style/TextTitle"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/release_date"
+                    style="@style/TextTitleShimmer"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0" />
 
-                <TextView
+                <View
                     android:id="@+id/text_popularity"
-                    style="@style/TextTitle"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/popularity"
+                    style="@style/TextTitleShimmer"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0" />
 
-                <TextView
-                    android:id="@+id/tv_release_detail"
-                    style="@style/TextDesc"
-                    android:layout_marginTop="8dp"
+                <View
+                    android:id="@+id/shimmer_release"
+                    style="@style/TextTitleShimmer"
                     android:layout_marginBottom="9dp"
-                    android:text="@string/type_detail"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
@@ -119,12 +102,10 @@
                     app:layout_constraintVertical_bias="0.0" />
 
 
-                <TextView
-                    android:id="@+id/tv_popularity_detail"
-                    style="@style/TextDesc"
-                    android:layout_marginTop="8dp"
+                <View
+                    android:id="@+id/shimmer_popularity"
+                    style="@style/TextTitleShimmer"
                     android:layout_marginBottom="18dp"
-                    android:text="@string/director_detail"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -138,4 +119,4 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.core.widget.NestedScrollView>
+</com.facebook.shimmer.ShimmerFrameLayout>
