--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,10 +14,6 @@
         <item name="colorControlNormal">@color/white</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
     <style name="TextTitle" parent="@style/Theme.AppCompat">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -32,6 +28,14 @@
         <item name="android:textSize">10sp</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="TextTitleShimmer" parent="@style/Theme.AppCompat">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:background">@color/colorShimmer</item>
+        <item name="android:layout_marginTop">8dp</item>
     </style>
 
 </resources>
